# github-tags-finder

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/github_tags_finder/: __init__.py  cli.py  client.py  output.py  query.py
tests/: test_cli.py  test_client.py  test_query.py
