[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-tags-finder"
version = "0.1.0"
description = "Find approachable GitHub issues by language, label, and search qualifier."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.scripts]
github-tags = "github_tags_finder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/github_tags_finder"]
